# fast-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  settings.toml
.mock/: mongo.js
app/: db.py  dependencies.py  enums.py  middlewares.py  models.py
app/routers/: base.py  emoji.py  mood.py  user.py  users.py
app/services/: user.py
app/utils/: __init__.py  auth.py  db.py  mongo.py
fast-app-api/: README.md  settings.toml
resources/: log-config.yml
static/: index.html
tests/: conftest.py  test_routers.py
