[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_first_party = []
force_grid_wrap = 0
use_parentheses = true
known_local_folder = ["app", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --tb=native --cov=app"

[tool.coverage.report]
exclude_lines = ["nocover"]
show_missing = true
omit = ["*/dependencies.py", "*/enums.py", "*/middlewares.py", "*/models.py"]

[tool.poetry]
name = "fast-app-api"
version = "0.0.1"
description = "Fast App - API"
authors = ["Anthony Caliani <avcaliani.it@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = { extras = ["all"], version = "^0.73.0" }
dynaconf = "^3.1.7"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
